<resources>
    <string name="app_name">MeetMe</string>
    <string name="preference">preferencemeetme</string>
    <!--Splash -->

    <string name="str_splash_title_frag_1">Mejor aplicación 2016</string>
    <string name="str_splash_title_frag_2">Mensaje al instante</string>
    <string name="str_splash_title_frag_3">Cerca de ti en un Click</string>
    <string name="str_splash_title_frag_4">Forma parte de esta iniciativa</string>

    <string name="str_splash_content_frag_1">Diseñada por los mejores Android Developers del I.E.S Zaidin-Vergeles</string>
    <string name="str_splash_content_frag_2">Conectado en todo momento y en cualquier lugar cuando lo necesites</string>
    <string name="str_splash_content_frag_3">Comunicate con tus familiares y amigos de manera facil, rapida y segura</string>
    <string name="str_splash_content_frag_4">Introduce tu número y descubre un mundo nuevo a tu alcance desde tu movil y desde la web</string>

    <string name="str_checkplay_tag">Este dispositivo no es compatible</string>
    <!--  -->

    <!--Proveedor-->
    <string name="str_error_uri">Uri no soportada.</string>
    <string name="str_error_clientnull">Cliente nulo</string>
    <string name="str_error_insertrow">Error al insertar la fila en</string>
    <string name="str_error_unknownelement">Elemento actividad desconocido</string>
    <string name="str_error_unknownuri">Uri desconocida</string>
    <string name="str_error_unknownactivity">Tipo de actividad desconocida</string>
    <!-- -->

    <!-- Manager -->
    <string name="key_telephone">telefono</string>
    <string name="key_token">token</string>
    <string name="key_description">description</string>
    <string name="key_nationality">nationality</string>
    <string name="key_email">email</string>
    <string name="key_facebook">facebook</string>
    <string name="key_birth">birth</string>
    <string name="key_nick">nick</string>
    <string name="key_privacity">privacity</string>
    <string name="key_twitter">twitter</string>
    <string name="key_last_connection">connection</string>
    <string name="key_privacy">see</string>
    <string name="str_register_broadcast">registerBroadcast</string>
    <string name="str_register">registrar</string>
    <!-- -->

    <!-- MyGcmListenerService -->
    <string name="str_tag_from">Desde: </string>
    <string name="str_tag_message">Mensaje: </string>
    <!-- -->

    <!-- RegistrationIntentService-->
    <string name="str_tag_registrationtoken">GCM Token de Registro: </string>
    <string name="str_tag_failedregistration">No se pudo completar la actualización de tokens </string>
    <!--- -->


    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">Ha ocurrido un error de conexión, revise su conexión e intentelo de nuevo.</string>
    <string name="title_activity_lista_conversaciones">ListaConversaciones </string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_put_phone">Introduzca su número de telefono.</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="title_activity_profile_user">ProfileUserActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="str_setting_acount">Cuenta</string>
    <string name="str_setting_who_see">QUIÉN PUEDE VER MI INFORMACIÓN PERSONAL</string>
    <string name="str_setting_last_hour">Hora de últ. vez</string>
    <string name="setting_option_see_all">Todos</string>
    <string name="setting_option_see_friend">Mis contactos</string>
    <string name="setting_option_see_anyone">Nadie</string>
    <string name="str_setting_see_photo">Foto de perfil</string>
    <string name="str_setting_see_description">Descripcion</string>
    <string name="str_setting_chats">Chats</string>
    <string name="str_setting_config_chats">AJUSTES DE CHATS</string>
    <string name="str_setting_font_size">Tamaño de fuente:</string>
    <string name="str_setting_font_size_big">Grande</string>
    <string name="str_setting_font_size_medium">Mediano</string>
    <string name="str_setting_font_size_small">Pequeño</string>
    <string name="str_setting_font_size_info">Tamaño de fuente para la pantalla de chat</string>
    <string name="str_setting_notifications">Notificaciones</string>
    <string name="str_setting_notification">NOTIFICACIONES DE MENSAJES</string>
    <string name="str_setting_vibration">Vibrar</string>
    <string name="str_setting_vibration_option_default">Predeterminado</string>
    <string name="str_setting_vibration_option_short">Corto</string>
    <string name="str_setting_vibration_option_long">Largo</string>
    <string name="str_setting_emergent_notification">Notificación emergente</string>
    <string name="str_setting_notification_group">NOTIFICACIONES DE GRUPO</string>
    <string name="str_setting_emergent_notification_never">Nunca</string>
    <string name="str_setting_emergent_notification_always">Siempre</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="str_conversation_default_messge">Escribir mensaje</string>
</resources>
