<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gcm.play.android.samples.com.gcmquickstart.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/setting_image"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/shape_circle_button"
                    android:padding="8dp"
                    android:src="@drawable/businessman" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:text="setting_nick"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/color_accent"
                android:padding="1dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="5dp"
                android:text="@string/str_setting_acount"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_setting_who_see"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="13dp"
                android:layout_margin="3dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/color_accent_light_ultra"
                android:padding="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical"
                android:onClick="settingSeeLastTime">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_last_hour"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/setting_option_last_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_option_see_anyone"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_see_photo"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_option_see_anyone"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_see_description"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_option_see_anyone"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/color_accent"
                android:padding="1dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="5dp"
                android:text="@string/str_setting_chats"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_setting_config_chats"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="13dp"
                android:layout_margin="3dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/color_accent_light_ultra"
                android:padding="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_font_size"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_font_size_info"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/color_accent"
                android:padding="1dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="5dp"
                android:text="@string/str_setting_notifications"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_setting_notification"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="13dp"
                android:layout_margin="3dp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/color_accent_light_ultra"
                android:padding="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_emergent_notification"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_emergent_notification_always"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_vibration"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_vibration_option_long"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_setting_notification_group"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="13dp"
                android:layout_margin="3dp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/color_accent_light_ultra"
                android:padding="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_emergent_notification"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_emergent_notification_always"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_vibration"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_setting_vibration_option_long"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
